--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -6,8 +6,8 @@
   </div>
   <div class="navlinks">
     <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">About Us</a></li>
+      <li><a [routerLink]="['']">Home</a></li>
+      <li><a [routerLink]="['shop']">Tienda</a></li>
       <li><a href="#">Services</a></li>
       <li><a href="#">Contacts</a></li>
     </ul>
