--- a/src/app/nav-bar/nav-bar.component.scss
+++ b/src/app/nav-bar/nav-bar.component.scss
@@ -4,6 +4,7 @@
       align-items: center;
       background-color: rgb(239, 239, 239);
       color: #fff;
+      font-family: Verdana, Geneva, Tahoma, sans-serif;
 
       .navlogo {
         font-size: 1.5rem;
@@ -11,8 +12,9 @@
 
         img {
           float: left;
-          width: 30%;
-          height: 30%;
+          width: 50%;
+          height: 50%;
+          margin-left: 2em;
         }
       }
 
@@ -21,10 +23,11 @@
           margin: 0px;
           padding: 0px;
           display: flex;
-          margin-left: 5em;
+          margin-right: 5em;
 
           li {
             list-style: none;
+            margin: 20px;
             
 
             a {
@@ -36,7 +39,8 @@
             }
 
             a:hover {
-              background-color: #555;
+              background-color: #03AEEB;
+              border-radius: 10px;
             }
           }
         }
